# kr_ilqr_optimizer

./: CMakeLists.txt  README.md  package.xml
include/: finitediff.hpp  quadMPC.hpp  test_utils.hpp
include/kr_ilqr_optimizer/: quadMPC.hpp  quaternion_utils.hpp  spline_trajectory_sampler.cpp  spline_trajectory_sampler.hpp  test_utils.hpp
scripts/: csv_plot_1_total_success_rate_vs_idx.py  csv_plot_2_front_end_success_rate_vs_idx.py  csv_plot_3_shortest_time.py  csv_plot_4_maze_diffculty_vs_jerk.py  csv_plot_5_all_eci.py  evaluate_1_traj_load_csv.py  evaluate_2_traj_count_success.py  evaluate_traj_count_success.py  evaluate_traj_load_csv.py
src/: finitediff.cpp  quaternion_utils.cpp  run_sampler.cpp  spline_trajectory_sampler.cpp  test_utils.cpp
